Fix wrap on nmap data
Nmap data that had long lines would cause the page to have horizontal
scroll and distort everything on the page. Setting white-space to
pre-wrap maintains the original whitespace but displays it better.

--- a/nweb-server/static/css/dashboard.css
+++ b/nweb-server/static/css/dashboard.css
@@ -103,3 +103,7 @@ body {
   display: inline-block;
   border-radius: 50%;
 }
+
+.nmap_data {
+  white-space: pre-wrap;
+}
